# Equivariance-Regularizer

./: LICENSE  README.md  pyproject.toml  test_main.py
.github/workflows/: test-and-publish.yml
src/equivariance_regularizer/: __init__.py  equivariance_regularizer.py
